@startuml
class Clock{
-Observable observable
-Timer clock
-Clock uniqueInstance
-Logger logger
-Clock()
+getInstance():clock
-startTick()
-setTime()
+stopClock()
}
interface Visitor{
+visit(Tracker)
+visit(TaskManager)
+visit(Task)
+visit(Interval);
}

interface VisitorRead{
+visit(FileManager)
}
interface Element{
+print()
}

interface VisitorPrint{
+print(Tracker)
+print(Task)
+print(TaskManager)
+print(Interval)
}

class FileManager{
+getJsonObjectRead():JSONObject
+saveToJsonFile(JSONObject)
+readFromJsonFile():TaskManager
+accept():TaskManager
+accept():JSONObject
}

class ToJsonVisitor{
+visit(Tracker):JSONObject
+visit(TaskManager):JSONObject
+visit(Task):JSONObject
+visit(Interval):JSONObject
}

class FromJsonVisitor{
+visit():TaskManager
-createTreeFromJsonObject(JSONObject, TaskManager, List<Tracker>)
-stringToLocalDateTime(String):LocalDateTime
}

class Interval{
-Task parentTask
-LocalDateTime startTime
-LocalDateTime endTime
-boolean inProgress
+Interval()
+isInProgress():boolean
+getDuration():Duration
+getEndTime():LocalDateTime
+getEndTimeToString():String
+setEndTime()
+getStartTimeToString():String
+getStartTime():LocalDateTime
+update()
+toString():String
+print()
+calculateTotalTime():long
}

class PrinterVisitor{
+Timer timer
-TaskManager taskManager
+PrinterVisitor()
+print(Tracker)
+print(TaskManager)
+print(Task)
+print(Interval)
+stopPrinting()
+update()
}

class Task{
-TaskManager parentProject
-List<Interval> listIntervals
-boolean active
+Task()
+getListIntervals():List<Interval>
+getStartTimeToString():String
+getEndTimeToString():String
+getStartTime():LocalDateTime
+updateParentEndTime()
+getDuration():Duration
+endInterval()
+createInterval():Interval
+intervalUpdated()
+toString():String
+getEndTime():LocalDateTime
+print()
+invariant():boolean
+setActive()
+calculateTotalTime():long
}

class TaskManager{
-TaskManager parentProject
-List<Tracker> trackers
+TaskManager(String)
+TaskManager(TaskManager,String)
#updateParentEndTime()
+setStartTime()
+getTrackers():List<Tracker>
+getDuration():Duration
+getStartTime():LocalDateTime
+getStartTimeToString():String
+setEndTime()
+getEndTime():LocalDateTime
+getEndTimeToString():String
+addChild(Tracker)
}

class Tracker{
#String name
#LocalDateTime startTime
#LocalDateTime endTime
+Tracker()
#updateParentEndTime()
+getName():String
+getDuration():Duration
+getStartTimeToString():String
+getEndTimeToString():String
+getStartTime():LocalDateTime
+getEndTime():LocalDateTime
+calculateTotalTime():long
}

class TotalTimeCalculator{
+LocalDateTime startInterval;
+LocalDateTime endInterval;
+TotalTimeCalculator()
+calculateTotalTime(Tracker):long()
+calculateTotalTime(TaskManager):long()
+calculateTotalTime(Task):long()
+calculateTotalTime(Interval):long()
-checkIfIsOut()
-getSpentTime()
}

interface VisitorTotalTime{
  +calculateTime(tracker):long
  +calculateTime(taskManager):long
  +calculateTime(task):long
  +calculateTimeinterval):long
}

class TagManager{
#ArrayList<Tags> tags
+TagManager(String)
+addTracker(String, tracker)
+removeTracker(String, tracker)
+searchTag(String):List<Tracker>
}

class Tag{
+String tag
+ArrayList<Tracker> trackersTag
+Tag(String)
+removeTracker(tracker)
+addTracker(tracker)
+getTag():Tag
+getTagName():String
+getTrackers:ArrayList<Tracker> trackersTag
}

interface Observer

class Observable

TaskManager"1  " -- "1..*" Task
class Task extends Tracker
class TaskManager extends Tracker
Task "1 "--"0.."Interval
class Interval implements Element
class Interval implements Observer
TaskManager "1 " o--"0..* "Tracker
class Clock extends Observable
class PrinterVisitor implements VisitorPrint
class PrinterVisitor implements Observer
class Task implements Element
class Tracker implements Element
class TaskManager implements Element
class FileManager implements Element
class FromJsonVisitor implements VisitorRead
class ToJsonVisitor implements Visitor
class TotalTimeCalculator implements VisitorTotalTime
class VisitorTotalTime implements Element
TagManager "1"*--"1..*" Tag
Tag *-- Tracker

VisitorTotalTime "1"--"1..*" Tracker
VisitorTotalTime "1"--"1..*" TaskManager
VisitorTotalTime "1"--"1..*" Interval
@enduml